...
                            fontFamily: "Lobster",
                            color: Colors.indigo.shade300,
                          ),
                        ),
                        const SizedBox(height: 20),
                        TextFormField(
                          key: Key('usernameField'),
                          controller: emailController,
                          decoration: InputDecoration(
                            labelText: 'Email',
                            prefixIcon: Icon(Icons.email,
                                color: Colors.indigo.shade200),
                            border: OutlineInputBorder(
...
                            }
                            return null;
                          },
                        ),
                        const SizedBox(height: 19),
                        TextFormField(
                          key: Key('passwordField'),
                          controller: passwordController,
                          decoration: InputDecoration(
                            labelText: 'Password',
                            prefixIcon: Icon(Icons.lock,
                                color: Colors.indigo.shade200),
                            border: OutlineInputBorder(
...
                            }
                            return null;
                          },
                        ),
                        const SizedBox(height: 20),
                        ElevatedButton(
                          key: Key('loginButton'),
                          onPressed: _login,
                          style: ElevatedButton.styleFrom(
                            backgroundColor: Colors.indigo,
                            shape: RoundedRectangleBorder(
                              borderRadius: BorderRadius.circular(30.0),
                            ),
...
